Replace use of deprecated code